[package]
name = "crypto_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
blake2b_simd = "1.0.1"
byteorder = "1.4.3"
hex = "0.4.3"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
strum = {version = "0.24.1", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full","sync"] }
rust-argon2 = { git = "https://github.com/Ragnaroek/rust-argon2" }
